New Stream based AbstractUrlForum