@@ -32,9 +32,8 @@ public class ForumUtils {
   }
 
   public static boolean anchorIsNotNavLink(Element elem) {
-    return elem.attr("href").isBlank()
-        || elem.attr("href").startsWith("javascript://")
-        || elem.attr("href").startsWith("#");
+    String href = elem.attr("href");
+    return StringUtils.isBlank(href) || href.startsWith("javascript://") || href.startsWith("#");
   }
 
   public static String assertNotBlank(String in) {
